--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^5.10.2",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"jsonwebtoken": "^9.0.2",
-		"passport": "^0.7.0"
+		"jsonwebtoken": "^9.0.2"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.7",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^20.11.20",
+		"@types/passport": "^1.0.16",
 		"concurrently": "^8.2.1",
 		"nodemon": "^3.0.1",
 		"prisma": "^5.10.2",
