--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^5.10.2",
+		"@prisma/client": "^5.16.2",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"jsonwebtoken": "^9.0.2"
+		"jsonwebtoken": "^9.0.2",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1"
 	},
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.7",
@@ -28,7 +30,7 @@
 		"@types/passport": "^1.0.16",
 		"concurrently": "^8.2.1",
 		"nodemon": "^3.0.1",
-		"prisma": "^5.10.2",
+		"prisma": "^5.16.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.3.3"
 	}
