feat: final crud admin

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,6 @@
-# IF YOU USE OTHER ORM EXCEPT PRISMA ORM
-SERVER_PORT=5000
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
-DB_URL=
-
 # ALLOWED CLIENT CORS
 CLIENT_URL_1=
+CLIENT_URL_2=
+
+DATABASE_URL=
+DIRECT_URL=
