--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^5.16.2",
+		"@prisma/client": "^5.17.0",
+		"body-parser": "^1.20.2",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
@@ -30,7 +31,7 @@
 		"@types/passport": "^1.0.16",
 		"concurrently": "^8.2.1",
 		"nodemon": "^3.0.1",
-		"prisma": "^5.16.2",
+		"prisma": "^5.17.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.3.3"
 	}
